round shape watch done!

--- a/S12.04-Solution-ResourceQualifiers/sunshinewear/src/main/res/values/colors.xml
+++ b/S12.04-Solution-ResourceQualifiers/sunshinewear/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="background">#03A9F4</color>
     <color name="digital_time_text">#ffffff</color>
     <color name="digital_date_text">#B3E5FC</color>
+    <color name="temperature_text">#ffffff</color>
 </resources>
