--- a/S12.04-Solution-ResourceQualifiers/sunshinewear/src/main/res/values/dimens.xml
+++ b/S12.04-Solution-ResourceQualifiers/sunshinewear/src/main/res/values/dimens.xml
@@ -10,5 +10,7 @@
     <dimen name="digital_y_offset">80dp</dimen>
     <dimen name="digital_line_height">25dp</dimen>
     <dimen name="digital_date_offset">10dp</dimen>
+    <dimen name="temperature_text_size">24dp</dimen>
+    <dimen name="temperature_text_size_round">26dp</dimen>
 
 </resources>
